--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,13 +42,29 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="GrabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Grip1)
++ActionMappings=(ActionName="GrabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Grip1)
++ActionMappings=(ActionName="HomingShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="HomingShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_FaceButton2)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_FaceButton1)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="LeftShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="LeftShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Trigger)
++ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
++ActionMappings=(ActionName="VRReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Left)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MotionController_Left_Thumbstick_Right)
++AxisMappings=(AxisName="ViewPitch",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="ViewPitch",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="ViewYaw",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Left)
++AxisMappings=(AxisName="ViewYaw",Scale=1.000000,Key=MotionController_Right_Thumbstick_Right)
++AxisMappings=(AxisName="ViewYaw",Scale=1.000000,Key=MouseX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
