--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -45,13 +45,15 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GrabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Grip1)
 +ActionMappings=(ActionName="GrabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Grip1)
 +ActionMappings=(ActionName="HomingShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+ActionMappings=(ActionName="HomingShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_FaceButton2)
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_FaceButton1)
++ActionMappings=(ActionName="HomingShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_FaceButton1)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="LeftShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="LeftShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Trigger)
 +ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +ActionMappings=(ActionName="VRReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
++ActionMappings=(ActionName="HomingAimOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_FaceButton2)
++ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
