--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/PlayerTestMap.PlayerTestMap
 GameDefaultMap=/Game/Maps/PlayerTestMap.PlayerTestMap
+GameInstanceClass=/Game/Controller/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -53,6 +54,8 @@ GameDefaultMap=/Game/Maps/PlayerTestMap.PlayerTestMap
 +Profiles=(Name="SelfBullet",CollisionEnabled=QueryOnly,ObjectTypeName="SelfBullet",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="SelfBullet",Response=ECR_Ignore),(Channel="Player",Response=ECR_Ignore)),HelpMessage="Needs description",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="SelfBullet",DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="Player",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++EditProfiles=(Name="Destructible",CustomResponses=((Channel="Destructible",Response=ECR_Ignore)))
++EditProfiles=(Name="Trigger",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="SelfBullet",Response=ECR_Ignore),(Channel="Player",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
