--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -54,6 +54,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +ActionMappings=(ActionName="HomingAimOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_FaceButton2)
 +ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="SetState",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
