--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -55,6 +55,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="HomingAimOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_FaceButton2)
 +ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="SetState",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="StateReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
