--- a/ReEarth.uproject
+++ b/ReEarth.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ReEarth",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
