--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/PlayerTestMap.PlayerTestMap
+EditorStartupMap=/Game/Maps/TestStart.TestStart
 GameDefaultMap=/Game/Maps/PlayerTestMap.PlayerTestMap
 GameInstanceClass=/Game/Controller/BP_GameInstance.BP_GameInstance_C
 
