--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -56,10 +56,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="SetState",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="StateReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveFront",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
++AxisMappings=(AxisName="MoveFront",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
++AxisMappings=(AxisName="MoveFront",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveFront",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Left)
