--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -56,6 +56,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightShot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="SetState",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="StateReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
++ActionMappings=(ActionName="VRReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_FaceButton2)
 +AxisMappings=(AxisName="MoveFront",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
 +AxisMappings=(AxisName="MoveFront",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
 +AxisMappings=(AxisName="MoveFront",Scale=-1.000000,Key=S)
