--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -57,6 +57,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SetState",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="StateReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="VRReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_FaceButton2)
++ActionMappings=(ActionName="StartGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Y)
 +AxisMappings=(AxisName="MoveFront",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Down)
 +AxisMappings=(AxisName="MoveFront",Scale=1.000000,Key=MotionController_Left_Thumbstick_Up)
 +AxisMappings=(AxisName="MoveFront",Scale=-1.000000,Key=S)
