--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,3 @@
-[URL]
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 
@@ -10,8 +9,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/MainMap.MainMap
-GameDefaultMap=/Game/Maps/PlayerTestMap.PlayerTestMap
+GameDefaultMap=/Game/Maps/MainMap.MainMap
 GameInstanceClass=/Game/Controller/BP_GameInstance.BP_GameInstance_C
+GlobalDefaultGameMode=/Game/Player/Blueprints/Basic/BP_ReEarth_GM.BP_ReEarth_GM_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -82,6 +82,10 @@ GameInstanceClass=/Game/Controller/BP_GameInstance.BP_GameInstance_C
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Bullet",NewName="SelfBullet")
 
+[/Script/NavigationSystem.RecastNavMesh]
+CellSize=80.000000
+RuntimeGeneration=Static
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -128,6 +132,4 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
-[/Script/NavigationSystem.RecastNavMesh]
-CellSize=80.000000
 
