--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D9F498DD48845A0D5025FEA233007E6B
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -79,8 +80,7 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\*.upluginmanifest
 +EarlyDownloaderPakFileFiles=...\*.uproject
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
-+MapsToCook=(FilePath="")
++MapsToCook=(FilePath="/Game/Maps/MainMap")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
