--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,10 @@ GameDefaultMap=/Game/Maps/MainMap.MainMap
 GameInstanceClass=/Game/Controller/BP_GameInstance.BP_GameInstance_C
 GlobalDefaultGameMode=/Game/Player/Blueprints/Basic/BP_ReEarth_GM.BP_ReEarth_GM_C
 
+[/Script/NavigationSystem.RecastNavMesh]
+CellSize=80.000000
+RuntimeGeneration=Static
+
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
 -Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
@@ -54,6 +58,7 @@ GlobalDefaultGameMode=/Game/Player/Blueprints/Basic/BP_ReEarth_GM.BP_ReEarth_GM_
 +Profiles=(Name="SelfBullet",CollisionEnabled=QueryOnly,ObjectTypeName="SelfBullet",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="SelfBullet",Response=ECR_Ignore),(Channel="Player",Response=ECR_Ignore)),HelpMessage="Needs description",bCanModify=True)
 +Profiles=(Name="Enemy",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Enemy",CustomResponses=((Channel="Destructible",Response=ECR_Overlap),(Channel="EnemyBullet",Response=ECR_Ignore)),HelpMessage="Needs description",bCanModify=True)
 +Profiles=(Name="EnemyBullet",CollisionEnabled=QueryOnly,ObjectTypeName="EnemyBullet",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="SelfBullet",Response=ECR_Ignore),(Channel="Player",Response=ECR_Overlap),(Channel="Enemy",Response=ECR_Ignore),(Channel="EnemyBullet",Response=ECR_Ignore)),HelpMessage="Needs description",bCanModify=True)
++Profiles=(Name="Kickable",CollisionEnabled=QueryAndPhysics,ObjectTypeName="",CustomResponses=,HelpMessage="Needs description",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="SelfBullet",DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="Player",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="Enemy",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
@@ -81,10 +86,6 @@ GlobalDefaultGameMode=/Game/Player/Blueprints/Basic/BP_ReEarth_GM.BP_ReEarth_GM_
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Bullet",NewName="SelfBullet")
-
-[/Script/NavigationSystem.RecastNavMesh]
-CellSize=80.000000
-RuntimeGeneration=Static
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
